web-infras/parser/tests/fixtures/esprima/es2020/import.meta/unicode-escape-import/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,1)
1|im\u0070ort.meta;
 |^
[SyntaxError]: import.meta may appear only with 'sourceType: "module" (1,1)
1|im\u0070ort.meta;
 |^
